# life-log

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: beb615d53e2c_initial_workout_logs_and_coffee_logs.py
app/: main.py
app/core/: config.py  db.py  timezone.py
app/mcp_server/: main.py  tools.py
app/models/: coffee.py  workout.py
app/routers/: coffee.py  health.py  workout.py
app/schemas/: coffee.py  workout.py
app/services/: coffee_service.py  workout_service.py
docs/: ARCHITECTURE.md  n8n-workflows.md
scripts/: migrate_notion.py
tests/: conftest.py  test_coffee.py  test_runtime_config.py  test_workout.py
