[project]
name = "life-log"
version = "0.1.0"
description = "Personal life logging — workouts, coffee, and more"
authors = [{ name = "mgh3326" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "fastmcp>=3.0.1,<4.0.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
